cmake_minimum_required(VERSION 3.20)

include_guard()

project(ExecutableMallocPosixAllocatorCWrapper)

add_library(ExecutableMallocPosixAllocatorCWrapper STATIC "${PROJECT_SOURCE_DIR}/Source/ExecutableMallocPosixAllocatorWrapper.cpp")
target_include_directories(ExecutableMallocPosixAllocatorCWrapper PUBLIC "${PROJECT_SOURCE_DIR}/Include")
target_compile_options(ExecutableMallocPosixAllocatorCWrapper PRIVATE "-Ofast" "-Wno-conversion-null")
target_compile_features(ExecutableMallocPosixAllocatorCWrapper PRIVATE cxx_std_20)

target_link_libraries(ExecutableMallocPosixAllocatorCWrapper PUBLIC ExecutableMallocPosixAllocator)
